crates/viewer/re_view_spatial/tests/snapshots/spawn_heuristics__detect_and_track_objects_like_scene_2d_view_heuristic.snap
---
source: crates/viewer/re_view_spatial/tests/spawn_heuristics.rs
expression: recommended_views
---
ViewSpawnHeuristics {
    recommended_views: [
        RecommendedView {
            origin: /3D/camera,
            query_filter: [
                "+ $origin/**",
            ],
        },
        RecommendedView {
            origin: /segmentation,
            query_filter: [
                "+ $origin/**",
            ],
        },
        RecommendedView {
            origin: /video,
            query_filter: [
                "+ $origin/**",
            ],
        },
    ],
}
