crates/viewer/re_view_spatial/tests/snapshots/spawn_heuristics__four_space_views_with_one_overlapping.snap
---
source: crates/viewer/re_view_spatial/tests/spawn_heuristics.rs
expression: recommended_views
---
ViewSpawnHeuristics {
    recommended_views: [
        RecommendedView {
            origin: /image1,
            query_filter: [
                "+ $origin/**",
            ],
        },
        RecommendedView {
            origin: /image2,
            query_filter: [
                "+ $origin/**",
            ],
        },
        RecommendedView {
            origin: /image3,
            query_filter: [
                "+ $origin/**",
            ],
        },
        RecommendedView {
            origin: /segmented,
            query_filter: [
                "+ $origin/**",
            ],
        },
    ],
}
