crates/viewer/re_view_spatial/tests/snapshots/spawn_heuristics__should_be_a_single_view.snap
---
source: crates/viewer/re_view_spatial/tests/spawn_heuristics.rs
expression: recommended_views
---
ViewSpawnHeuristics {
    recommended_views: [
        RecommendedView {
            origin: /image,
            query_filter: [
                "+ $origin",
            ],
        },
        RecommendedView {
            origin: /image/color,
            query_filter: [
                "+ $origin/**",
            ],
        },
        RecommendedView {
            origin: /image/depth,
            query_filter: [
                "+ $origin/**",
            ],
        },
        RecommendedView {
            origin: /image/seg,
            query_filter: [
                "+ $origin/**",
            ],
        },
    ],
}
