crates/viewer/re_view_spatial/tests/snapshots/spawn_heuristics__should_be_three_space_views.snap
---
source: crates/viewer/re_view_spatial/tests/spawn_heuristics.rs
expression: recommended_views
snapshot_kind: text
---
ViewSpawnHeuristics {
    recommended_views: [
        RecommendedView {
            origin: /3D/camera,
            query_filter: [
                "+ $origin/**",
            ],
        },
        RecommendedView {
            origin: /image1,
            query_filter: [
                "+ $origin/**",
            ],
        },
        RecommendedView {
            origin: /image2,
            query_filter: [
                "+ $origin/**",
            ],
        },
    ],
}
